# APEX

./: .gitignore  README.md  manifest.yaml  pyproject.toml
.github/workflows/: quality-gates.yml
apex/: __init__.py  __main__.py
apex/analytics/: __init__.py
apex/api/: __init__.py
apex/contracts/: README.md  __init__.py  engines.py
apex/core/: README.md  __init__.py  base.py  config.py  constants.py  context.py  enums.py  exceptions.py  identity.py  logging.py  metadata.py  result.py  serialization.py  types.py  validation.py  versioning.py
apex/dashboard/: __init__.py
apex/data/: README.md  __init__.py  catchup.py  events.py  module.py  pipeline.py  quality.py  replay.py  streaming.py
apex/decision/: __init__.py  events.py  kernel.py  ledger.py  plugin.py  service.py  setups.py  store.py
apex/deployment/: __init__.py  backup.py  cli.py  config.py  package.py  scheduler.py
apex/domain/: README.md  __init__.py  feature.py  learning.py  market.py  money.py  order.py  portfolio.py  position.py  probability.py  risk.py  signal.py  snapshot.py  trade.py
apex/engines/: __init__.py
apex/execution/: __init__.py  config.py  engine.py  events.py  flatten.py  paper.py  plugin.py  service.py  store.py
apex/features/: README.md  __init__.py  calculations.py  events.py  pipeline.py  plugin.py  registry.py
apex/kernel/: README.md  __init__.py  container.py  health.py  kernel.py  modules.py
config/: README.md  device.yaml  exchange.yaml  logging.yaml  market.yaml  optimizer.yaml  portfolio.yaml  research.yaml  risk.yaml  scheduler.yaml  security.yaml  signal.yaml  system.yaml  telegram.yaml  telemetry.yaml
docs/: ACCEPTANCE.md  ARCHITECTURE.md  CONVENTIONS.md  DEPLOYMENT.md  HANDOFF.md  PHASES.md
tests/: README.md  conftest.py
(+227 files in other folders)
